SAK-47682 Apache Xalan Xerces removal
https://sakaiproject.atlassian.net/browse/SAK-47682