@@ -75,8 +75,6 @@
     <sakai.tomcat.version>9.0.65</sakai.tomcat.version>
     <sakai.thymeleaf.version>3.0.15.RELEASE</sakai.thymeleaf.version>
     <sakai.velocity.version>1.6.4</sakai.velocity.version>
-    <sakai.xerces.impl.version>2.12.2</sakai.xerces.impl.version>
-    <sakai.xerces.api.version>2.6.2</sakai.xerces.api.version>
     <sakai.log4j.version>2.18.0</sakai.log4j.version>
     <sakai.slf4j.version>1.7.36</sakai.slf4j.version>
     <sakai.poi.version>5.2.2</sakai.poi.version>
@@ -395,7 +393,7 @@
       <dependency>
         <groupId>xerces</groupId>
         <artifactId>xercesImpl</artifactId>
-        <version>${sakai.xerces.impl.version}</version>
+        <version>2.12.2</version>
         <scope>provided</scope>
       </dependency>
       <!-- common/lib -->
@@ -422,7 +420,8 @@
       <dependency>
         <groupId>xerces</groupId>
         <artifactId>xmlParserAPIs</artifactId>
-        <version>${sakai.xerces.api.version}</version>
+        <version>2.6.2</version>
+        <scope>provided</scope>
       </dependency>
       <!-- block these versions if the user really wants them they will have to be specific -->
       <dependency>
@@ -2708,8 +2707,14 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <release>${sakai.jdk.version}</release>
+          <compilerVersion>${sakai.jdk.version}</compilerVersion>
+          <source>${sakai.jdk.version}</source>
+          <target>${sakai.jdk.version}</target>
           <forceJavacCompilerUse>true</forceJavacCompilerUse>
+          <compilerArgs>
+            <arg>--add-exports=java.xml/com.sun.org.apache.xml.internal.serializer=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.xml/com.sun.org.apache.xml.internal.utils=ALL-UNNAMED</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
